2014-03-23  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/package.el (package-show-package-list): If the buffer
	is already displayed in another window, switch to that window.

2014-03-21  Daniel Colascione  <dancol@dancol.org>

	* mail/emacsbug.el (report-emacs-bug): Include memory usage
	information in bug reports.

2014-03-23  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/cl-macs.el (cl--do-arglist): Use a little `cl-loop'
	list to look for keyword arguments instead of `memq', fixing
	(Bug#3647) --- unfortunately, only for freshly-compiled code.
	Please make bootstrap.

2014-03-23  Richard Stallman  <rms@gnu.org>

	* battery.el (battery-linux-sysfs): Search for each field
	from the beginning of the buffer.

2014-03-22  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/package.el (package-desc): Use the contents of the
	quoted form, not its cdr.  (Bug#16873)

2014-03-22  Juanma Barranquero  <lekktu@gmail.com>

	* w32-common-fns.el (x-selection-owner-p): Add empty docstring for the
	benefit of doc.c; change parameter profile to match the X function.

2014-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): Add docstring for `tramp-login-env'
	and `tramp-copy-env'.

	* net/tramp-sh.el (tramp-methods) <sudo>: Add `tramp-login-env'.
	(tramp-maybe-open-connection): Handle `tramp-login-env'.

2014-03-21  Glenn Morris  <rgm@gnu.org>

	* electric.el (electric-indent-post-self-insert-function): Add doc.

2014-03-21  Dmitry Gutov  <dgutov@yandex.ru>

	* emacs-lisp/package.el (package-compute-transaction):
	Use `version-list-<=' to compare the requirement version against
	the version of package already to be installed.  Update the error
	message.  (Bug#16826)

	* progmodes/ruby-mode.el (ruby-smie-rules):
	Add indentation rule for ` @ '.  (Bug#17050)

2014-03-21  Juanma Barranquero  <lekktu@gmail.com>

	* align.el (align-regexp): Remove superfluous backslash.

	* ffap.el (ffap-ftp-default-user, ffap-url-regexp)